<resources>
    <string name="app_name">X5_Debug</string>
    <string name="log_area_hint">日志区域</string>
    <string name="url_hint">请输入url</string>
    <string name="scan_qr_code">扫一扫</string>
    <string name="inspect">x5调试</string>
    <string name="escape">转义</string>
    <string name="open">打开</string>
    <string name="downloadX5">x5下载</string>
    <string name="title_activity_test_web_h5">TestWebH5Activity</string>
    <string name="spinner_prompt">选择tbs最小内核版本</string>
</resources>