<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/view_main"
        android:layout_width="362dp"
        android:layout_height="194dp"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toTopOf="@+id/logArea"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.444">

        <EditText
            android:id="@+id/webViewUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/url_hint"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:lines="9"
            android:minHeight="194dp"
            android:minLines="1"
            tools:ignore="TextFields" />
    </ScrollView>

    <Button
        android:id="@+id/scanQrcode"
        android:layout_width="104dp"
        android:layout_height="48dp"
        android:text="@string/scan_qr_code"
        app:layout_constraintBottom_toTopOf="@+id/view_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.084"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.576" />

    <Button
        android:id="@+id/inspect"
        android:layout_width="76dp"
        android:layout_height="48dp"
        android:background="#33CC00"
        android:text="@string/inspect"
        android:textColor="#212121"
        android:textColorHint="#888888"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.371"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.44" />

    <Button
        android:id="@+id/downloadX5"
        android:layout_width="74dp"
        android:layout_height="48dp"
        android:background="#33CC00"
        android:text="@string/downloadX5"
        android:textColor="#212121"
        android:textColorHint="#888888"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.925"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.442" />

    <Button
        android:id="@+id/escape"
        android:layout_width="77dp"
        android:layout_height="50dp"
        android:background="#33CC00"
        android:minHeight="36dp"
        android:text="@string/escape"
        android:textColor="#212121"
        android:textColorHint="#888888"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.073"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.44" />

    <Button
        android:id="@+id/openWebView"
        android:layout_width="97dp"
        android:layout_height="48dp"
        android:text="@string/open"
        app:layout_constraintBottom_toTopOf="@+id/view_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.92"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.576" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="87dp"
        android:layout_height="48dp"
        android:spinnerMode="dropdown"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.443" />

    <ScrollView
        android:id="@+id/logArea"
        android:layout_width="369dp"
        android:layout_height="337dp"
        android:contentDescription="@string/log_area_hint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.942">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/logView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/log_area_hint"
                android:textIsSelectable="true" />
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>